# agnt

./: AGENTS.md
app/: .env.localdev  .gitignore  index.html  package.json  tsconfig.json  vite.config.ts
app/src/: index.css  main.tsx  routeTree.gen.ts  vite-env.d.ts
app/src-tauri/: Cargo.toml  tauri.conf.json  tauri.localdev.json
app/src-tauri/assets/: browser-preload.js
app/src-tauri/capabilities/: default.json
app/src-tauri/icons/: icon.icns
app/src-tauri/icons/badges/: README.md  generate-badges.ts
app/src-tauri/icons/local/: icon.icns
app/src-tauri/src/: browser.rs  lib.rs  main.rs  terminals.rs
app/src/assets/sounds/: LICENSE.md  generate-sounds.ts
app/src/components/chat/: AgenticModeSelector.tsx  AttachmentBar.tsx  AttachmentChip.tsx  BranchNavigator.tsx  ChatInput.tsx  ContextMeter.tsx  ConversationPane.tsx  DiagnosticsInline.tsx  MessageAttachments.tsx  MessageBubble.tsx  MessageEditor.tsx  MessageFooter.tsx  MessageList.tsx  MessageText.tsx  ModelSelector.tsx  PermissionCard.tsx  PermissionModeSelector.tsx  PierreDiff.tsx  QuestionCard.tsx  QueuedPromptBubble.tsx  StreamingDots.tsx  StreamingPlaceholder.tsx  ThinkingBlock.tsx  TodosCard.tsx  ToolCallCard.tsx  UserMessageFooter.tsx  (+1 more)
app/src/lib/: api.ts  safe-url.ts  server-url.ts
app/src/routes/: __root.tsx  index.tsx
app/src/typings/: rules.ts  server.ts  settings.ts
server/: .env.example  README.md  build.ts  package.json
server/src/: app.ts  index.ts  readiness.ts
server/src/lib/: codex-identity.ts  db.ts  homedir.ts  logger.ts  mime-detect.ts  stats-db.ts  tokenizer.ts
(+325 files in other folders)
