[package]
name = "Agnt"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "agnt_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.5", features = [] }

[dependencies]
tauri = { version = "2.10.2", features = ["image-png", "unstable"] }
tauri-plugin-shell = "2.3.5"
tauri-plugin-http = "2.5.7"
tauri-plugin-opener = "2.5.3"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-dialog = { version = "2.6.0", features = [] }
tauri-plugin-notification = "2"
portable-pty = "0.9"
url = "2"
